CVS_SILENT made messages

--- a/buildtools/ada/kdevadaproject.desktop
+++ b/buildtools/ada/kdevadaproject.desktop
@@ -3,30 +3,48 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ada Project
+Comment[ca]=Projecte Ada
 Comment[da]=Ada-projekt
-Comment[de]=Ada-Projekt
+Comment[de]=Ada-Projekt für KDevelop
+Comment[el]=Εργασία Ada
 Comment[es]=Projecto Ada
+Comment[et]=Ada projekt
+Comment[fr]=Un module externe pour la gestion de projet avec le langage ADA.
 Comment[hu]=Ada projekt
 Comment[it]=Progetto Ada
+Comment[nl]=Ada-project
 Comment[pt]=Projecto Ada
 Comment[pt_BR]=Projeto Ada
+Comment[ro]=Proiect Ada
+Comment[ru]=Проект Ada
 Comment[sr]=Ada пројекат
 Comment[sv]=Ada-projekt
+Comment[uz]=Ada лойиҳаси
 Comment[xx]=xxAda Projectxx
+Comment[zh_CN]=Ada项目
 Name=KDevAdaProject
-Name[de]=KdevAdaProjekt
+Name[de]=Ada-Projekt (KDevelop)
 Name[sv]=KDevelop Ada-projekt
 Name[xx]=xxKDevAdaProjectxx
 GenericName=Ada Project
+GenericName[ca]=Projecte Ada
 GenericName[da]=Ada-projekt
 GenericName[de]=Ada-Projekt
+GenericName[el]=Εργασία Ada
 GenericName[es]=Projecto Ada
+GenericName[et]=Ada projekt
+GenericName[fr]=Projet avec ADA
 GenericName[hu]=Ada projekt
+GenericName[it]=Project con Ada
+GenericName[nl]=Ada-project
 GenericName[pt]=Projecto Ada
 GenericName[pt_BR]=Projeto Ada
+GenericName[ru]=Проект Ada
 GenericName[sr]=Ada пројекат
 GenericName[sv]=Ada-projekt
+GenericName[uz]=Ada лойиҳаси
 GenericName[xx]=xxAda Projectxx
+GenericName[zh_CN]=Ada项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevadaproject
 X-KDevelop-Version=1
