--- a/buildtools/ant/kdevantproject.desktop
+++ b/buildtools/ant/kdevantproject.desktop
@@ -3,30 +3,47 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ant Project
+Comment[ca]=Projecte Ant
 Comment[da]=Ant-projekt
-Comment[de]=Ant-Projekt
+Comment[de]=Ant-Projekt für KDevelop
+Comment[el]=Εργασία Ant
 Comment[es]=Projecto Ant
+Comment[et]=Ant projekt
+Comment[fr]=Un module externe pour la gestion de projet avec le programme « Ant ».
 Comment[hu]=Ant projekt
 Comment[it]=Progetto Ant
+Comment[nl]=Ant-project
 Comment[pt]=Projecto Ant
 Comment[pt_BR]=Projeto Ant
+Comment[ru]=Проект Ant
 Comment[sr]=Ant пројекат
 Comment[sv]=Ant-projekt
+Comment[uz]=Ant лойиҳаси
 Comment[xx]=xxAnt Projectxx
+Comment[zh_CN]=Ant项目
 Name=KDevAntProject
-Name[de]=KDevAntProjekt
+Name[de]=Ant-Projekt (KDevelop)
 Name[sv]=KDevelop Ant-projekt
 Name[xx]=xxKDevAntProjectxx
 GenericName=Ant Project
+GenericName[ca]=Projecte Ant
 GenericName[da]=Ant-projekt
-GenericName[de]=Ant-projekt
+GenericName[de]=Ant-Projekt
+GenericName[el]=Εργασία Ant
 GenericName[es]=Projecto Ant
+GenericName[et]=Ant projekt
+GenericName[fr]=Projet avec Ant
 GenericName[hu]=Ant projekt
+GenericName[it]=Project con Ant
+GenericName[nl]=Ant-project
 GenericName[pt]=Projecto Ant
 GenericName[pt_BR]=Projeto Ant
+GenericName[ru]=Проект Ant
 GenericName[sr]=Ant пројекат
 GenericName[sv]=Ant-projekt
+GenericName[uz]=Ant лойиҳаси
 GenericName[xx]=xxAnt Projectxx
+GenericName[zh_CN]=Ant项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevantproject
 X-KDevelop-Version=1
