--- a/buildtools/autotools/kdevautoproject.desktop
+++ b/buildtools/autotools/kdevautoproject.desktop
@@ -3,31 +3,48 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Automake Project
+Comment[ca]=Projecte Automake
 Comment[da]=Automake projekt
-Comment[de]=Automake-Projekt
+Comment[de]=Automake-Projekt für KDevelop
+Comment[el]=Εργασία Automake
 Comment[es]=Projecto de Automake
+Comment[et]=Automake'i project
+Comment[fr]=Un module externe pour la gestion de projet avec le programme « Automake ».
 Comment[hu]=Automake-projekt
+Comment[it]=Progetto per automake
+Comment[nl]=Automake-project
 Comment[pt]=Projecto Automake
 Comment[pt_BR]=Projeto Automake
+Comment[ru]=Проект Automake
 Comment[sr]=Automake пројекат
 Comment[sv]=Automake-projekt
+Comment[uz]=Automake лойиҳаси
 Comment[xx]=xxAutomake Projectxx
+Comment[zh_CN]=Automake项目
 Name=KDevAutoProject
-Name[de]=KDevAutoProjekt
+Name[de]=Automake-Projekt (KDevelop)
 Name[pt_BR]=KDevAutoProjeto
 Name[sv]=KDevelop autoprojekt
 Name[xx]=xxKDevAutoProjectxx
 GenericName=Automake Project
+GenericName[ca]=Projecte Automake
 GenericName[da]=Automake projekt
 GenericName[de]=Automake-Projekt
+GenericName[el]=Εργασία Automake
 GenericName[es]=Projecto de Automake
+GenericName[et]=Automake'i projekt
+GenericName[fr]=Projet avec Automake
 GenericName[hu]=Automake-projekt
 GenericName[it]=Progetto Automake
+GenericName[nl]=Automake-project
 GenericName[pt]=Projecto de Automake
 GenericName[pt_BR]=Projeto Automake
+GenericName[ru]=Проект Automake
 GenericName[sr]=Automake пројекат
 GenericName[sv]=Automake-projekt
+GenericName[uz]=Automake лойиҳаси
 GenericName[xx]=xxAutomake Projectxx
+GenericName[zh_CN]=Automake项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevautoproject
 X-KDevelop-Version=1
