--- a/buildtools/custommakefiles/kdevcustomproject.desktop
+++ b/buildtools/custommakefiles/kdevcustomproject.desktop
@@ -3,30 +3,45 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Custom Project
+Comment[ca]=Projecte a mida
 Comment[da]=Brugervalgt projekt
-Comment[de]=Benutzerdefiniertes Projekt
+Comment[de]=Benutzerdefiniertes Projekt für KDevelop
+Comment[el]=Προσαρμοσμένη εργασία
 Comment[es]=Proyecto personalizado
+Comment[et]=Kohandatav projekt
+Comment[fr]=Un module externe pour la gestion de projet personnalisé.
 Comment[hu]=Egyedi projekt
+Comment[it]=Progetto personalizzato
+Comment[nl]=Aangepast project
 Comment[pt]=Projecto Personalizado
 Comment[pt_BR]=Projeto Personalizado
+Comment[ru]=Особый проект
 Comment[sr]=Произвољан пројекат
 Comment[sv]=Eget projekt
 Comment[xx]=xxCustom Projectxx
+Comment[zh_CN]=自定义项目
 Name=KDevCustomProject
-Name[de]=KDevBenutzerdefProjekt
+Name[de]=Benutzerdefinierte Projekt (KDevelop)
 Name[sv]=KDevelop eget projekt
 Name[xx]=xxKDevCustomProjectxx
 GenericName=Custom Project
+GenericName[ca]=Projecte a mida
 GenericName[da]=Brugervalgt projekt
 GenericName[de]=Benutzerdefiniertes Projekt
+GenericName[el]=Προσαρμοσμένη εργασία
 GenericName[es]=Proyecto personalizado
+GenericName[et]=Kohandatav projekt
+GenericName[fr]=Projet personnalisé
 GenericName[hu]=egyedi projekt
 GenericName[it]=Progetto personalizzato
+GenericName[nl]=Aangepast project
 GenericName[pt]=Projecto Personalizado
 GenericName[pt_BR]=Projeto Personalizado
+GenericName[ru]=Особый проект
 GenericName[sr]=Произвољан пројекат
 GenericName[sv]=Eget projekt
 GenericName[xx]=xxCustom Projectxx
+GenericName[zh_CN]=自定义项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevcustomproject
 X-KDevelop-Version=1
