--- a/buildtools/generic/buildsystem/shellscript/kdevbuildscript.desktop
+++ b/buildtools/generic/buildsystem/shellscript/kdevbuildscript.desktop
@@ -3,7 +3,26 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Name=KDevBuildShellScript
+Name[de]=Shell-Programm (KDevelop)
+Name[sv]=KDevelop byggskalskript
+Name[xx]=xxKDevBuildShellScriptxx
 Comment=Shell script based build system
+Comment[ca]=Sistema de construcció basat en scripts de Shell
+Comment[da]=Skal-script baseret byggesystem
+Comment[de]=Shell-Skript-basiertes Erstellungssystem
+Comment[es]=Sistema de construcción basado en guiones de comandos
+Comment[et]=Shelliskriptide põhine ehitussüsteem
+Comment[fr]=Un module externe pour la gestion de projets basés sur des scripts shell.
+Comment[hu]=Parancsfájl-alapú fordítórendszer
+Comment[it]=Sistema di compilazione basato su script di shell
+Comment[nl]=Shellscript-gebaseerd buildsysteem
+Comment[pt]=Sistema de compilação baseado em 'shell script'
+Comment[pt_BR]=Sistema de construção baseado em script shell
+Comment[ru]=Система сборки, основанная на скриптах оболочки
+Comment[sr]=Систем за градњу заснован на скриптама шкољке
+Comment[sv]=Byggsystem baserat på skalskript
+Comment[xx]=xxShell script based build systemxx
+Comment[zh_CN]=基于Shell脚本的编译系统
 ServiceTypes=KDevelop/BuildSystems
 X-KDevelop-Version=1
 X-KDevelop-BuildSystem=ShellScript
