--- a/buildtools/generic/kdevgenericproject.desktop
+++ b/buildtools/generic/kdevgenericproject.desktop
@@ -4,15 +4,23 @@ Exec=blubb
 Icon=kdevelop
 Type=Service
 Name=KDevGenericProject
-Name[de]=KDevGenericProjekt
+Name[de]=Generisches Projekt (KDevelop)
 Name[sv]=KDevelop generellt projekt
+Name[xx]=xxKDevGenericProjectxx
 Comment=GenericProject
-Comment[de]=Generisches Projekt
+Comment[ca]=Projecte genèric
+Comment[de]=Generisches Projekt für KDevelop
 Comment[es]=Proyecto genérico
+Comment[fr]=Un module externe pour la gestion de projet générique.
 Comment[hu]=Általános projekt
+Comment[it]=Progetto generico
+Comment[nl]=Algemeen project
 Comment[pt]=Projecto Genérico
+Comment[ru]=Общий проект
 Comment[sr]=Генерички пројекат
 Comment[sv]=Generellt projekt
+Comment[xx]=xxGenericProjectxx
+Comment[zh_CN]=常规项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevgenericproject
 X-KDevelop-Version=1
