--- a/buildtools/haskell/kdevhaskellproject.desktop
+++ b/buildtools/haskell/kdevhaskellproject.desktop
@@ -3,27 +3,45 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Haskell Project
+Comment[ca]=Projecte Haskell
 Comment[da]=Haskell projekt
+Comment[de]=Haskell-Projekt für KDevelop
+Comment[el]=Εργασία Haskell
 Comment[es]=Proyecto Haskell
+Comment[et]=Haskelli projekt
+Comment[fr]=Un module externe pour la gestion de projet avec la langage Haskell.
 Comment[hu]=Haskell projekt
+Comment[it]=Progetto per Haskell
+Comment[nl]=Haskell-project
 Comment[pt]=Projecto de Haskell
 Comment[pt_BR]=Projeto Haskell
+Comment[ru]=Проект Haskell
 Comment[sr]=Haskell пројекат
 Comment[sv]=Haskell-projekt
-Comment[de]=Haskell-Projekt
+Comment[xx]=xxHaskell Projectxx
+Comment[zh_CN]=Haskell项目
 Name=KDevHaskellProject
+Name[de]=Haskell-Projekt (KDevelop)
 Name[sv]=KDevelop Haskell-projekt
-Name[de]=KDevHaskellProjekt
+Name[xx]=xxKDevHaskellProjectxx
 GenericName=Haskell Project
+GenericName[ca]=Projecte Haskell
 GenericName[da]=Haskell projekt
+GenericName[de]=Haskell-Projekt
+GenericName[el]=Εργασία Haskell
 GenericName[es]=Proyecto Haskell
+GenericName[et]=Haskelli projekt
+GenericName[fr]=Projet avec Haskell
 GenericName[hu]=Haskell projekt
 GenericName[it]=Progetto Haskell
+GenericName[nl]=Haskell-project
 GenericName[pt]=Projecto de Haskell
 GenericName[pt_BR]=Projeto Haskell
+GenericName[ru]=Проект Haskell
 GenericName[sr]=Haskell пројекат
 GenericName[sv]=Haskell-projekt
-GenericName[de]=Haskell-Projekt
+GenericName[xx]=xxHaskell Projectxx
+GenericName[zh_CN]=Haskell项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevhaskellproject
 X-KDevelop-Version=1
