--- a/buildtools/pascal/kdevpascalproject.desktop
+++ b/buildtools/pascal/kdevpascalproject.desktop
@@ -3,29 +3,47 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Pascal Project
+Comment[ca]=Projecte Pascal
 Comment[da]=Pascal projekt
-Comment[de]=Pascal-Projekt
+Comment[de]=Pascal-Projekt für KDevelop
+Comment[el]=Εργασία Pascal
 Comment[es]=Proyecto de Pascal
+Comment[et]=Pascali projekt
+Comment[fr]=Un module externe pour la gestion de projet avec le langage PASCAL.
 Comment[hu]=Pascal projekt
+Comment[it]=Progetto per Pascal
+Comment[nl]=Pascal-project
 Comment[pt]=Projecto de Pascal
 Comment[pt_BR]=Projeto Pascal
+Comment[ru]=Проект Pascal
 Comment[sr]=Pascal пројекат
 Comment[sv]=Pascal-projekt
+Comment[uz]=Pascal лойиҳаси
 Comment[xx]=xxPascal Projectxx
+Comment[zh_CN]=Pascal项目
 Name=KDevPascalProject
-Name[de]=KDevPascalProjekt
+Name[de]=Pascal-Projekt (KDevelop)
 Name[sv]=KDevelop Pascal-projekt
 Name[xx]=xxKDevPascalProjectxx
 GenericName=Pascal Project
+GenericName[ca]=Projecte Pascal
 GenericName[da]=Pascal projekt
 GenericName[de]=Pascal-Projekt
+GenericName[el]=Εργασία Pascal
 GenericName[es]=Proyecto de Pascal
+GenericName[et]=Pascali projekt
+GenericName[fr]=Projet avec PASCAL
 GenericName[hu]=Pascal projekt
+GenericName[it]=Progetto in Pascal
+GenericName[nl]=Pascal-project
 GenericName[pt]=Projecto de Pascal
 GenericName[pt_BR]=Projeto Pascal
+GenericName[ru]=Проект Pascal
 GenericName[sr]=Pascal пројекат
 GenericName[sv]=Pascal-projekt
+GenericName[uz]=Pascal лойиҳаси
 GenericName[xx]=xxPascal Projectxx
+GenericName[zh_CN]=Pascal项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevpascalproject
 X-KDevelop-Version=1
