--- a/buildtools/qmake/kdevtmakeproject.desktop
+++ b/buildtools/qmake/kdevtmakeproject.desktop
@@ -2,29 +2,45 @@
 Type=Service
 Exec=blubb
 Comment=TMake Project
+Comment[ca]=Projecte TMake
 Comment[da]=TMake projekt
-Comment[de]=TMake-Projekt
+Comment[de]=TMake-Projekt für KDevelop
+Comment[el]=Εργασία TMake
 Comment[es]=Proyecto TMake
+Comment[et]=TMake projekt
+Comment[fr]=Un module externe pour la gestion de projet avec le programme « TMake ».
 Comment[hu]=TMake-projekt
+Comment[it]=Progetto per TMake
+Comment[nl]=TMake-project
 Comment[pt]=Projecto TMake
 Comment[pt_BR]=Projeto TMake
+Comment[ru]=Проект TMake
 Comment[sr]=TMake пројекат
 Comment[sv]=Tmake-projekt
 Comment[xx]=xxTMake Projectxx
+Comment[zh_CN]=TMake项目
 Name=KDevTMakeProject
-Name[de]=KDevTMakeProjekt
+Name[de]=TMake-Projekt (KDevelop)
 Name[sv]=KDevelop Tmake-projekt
 Name[xx]=xxKDevTMakeProjectxx
 GenericName=TMake Project
+GenericName[ca]=Projecte TMake
 GenericName[da]=TMake projekt
 GenericName[de]=TMake-Projekt
+GenericName[el]=Εργασία TMake
 GenericName[es]=Proyecto TMake
+GenericName[et]=TMake projekt
+GenericName[fr]=Projet avec TMake
 GenericName[hu]=TMake-projekt
+GenericName[it]=Progetto per TMake
+GenericName[nl]=TMake-project
 GenericName[pt]=Projecto TMake
 GenericName[pt_BR]=Projeto TMake
+GenericName[ru]=Проект TMake
 GenericName[sr]=TMake пројекат
 GenericName[sv]=Tmake-projekt
 GenericName[xx]=xxTMake Projectxx
+GenericName[zh_CN]=TMake项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevtrollproject
 X-KDevelop-Version=1
