--- a/buildtools/qmake/kdevtrollproject.desktop
+++ b/buildtools/qmake/kdevtrollproject.desktop
@@ -2,28 +2,47 @@
 Type=Service
 Exec=blubb
 Comment=QMake Project
+Comment[ca]=Projecte QMake
 Comment[da]=QMake projekt
-Comment[de]=QMake-Projekt
+Comment[de]=QMake-Projekt für KDevelop
+Comment[el]=Εργασία QMake
 Comment[es]=Proyecto QMake
+Comment[et]=QMake projekt
+Comment[fr]=Un module externe pour la gestion de projet avec le programme « QMake ».
 Comment[hu]=QMake-projekt
+Comment[it]=Progetto per QMake
+Comment[nl]=QMake-project
 Comment[pt]=Projecto QMake
 Comment[pt_BR]=Projeto QMake
+Comment[ru]=Проект QMake
 Comment[sr]=QMake пројекат
 Comment[sv]=Qmake-projekt
+Comment[uz]=QMake лойиҳаси
 Comment[xx]=xxQMake Projectxx
+Comment[zh_CN]=QMake项目
 Name=KDevTrollProject
-Name[de]=KDevTrollProjekt
+Name[de]=QMake-Projekt (KDevelop)
 Name[sv]=KDevelop Troll-projekt
 Name[xx]=xxKDevTrollProjectxx
 GenericName=QMake Project
+GenericName[ca]=Projecte QMake
 GenericName[da]=QMake projekt
+GenericName[de]=QMake-Projekt
+GenericName[el]=Εργασία QMake
 GenericName[es]=Proyecto QMake
+GenericName[et]=QMake projekt
+GenericName[fr]=Projet avec QMake
 GenericName[hu]=QMake-projekt
+GenericName[it]=Progetto per QMake
+GenericName[nl]=QMake-project
 GenericName[pt]=Projecto QMake
 GenericName[pt_BR]=Projeto QMake
+GenericName[ru]=Проект QMake
 GenericName[sr]=QMake пројекат
 GenericName[sv]=Qmake-projekt
+GenericName[uz]=QMake лойиҳаси
 GenericName[xx]=xxQMake Projectxx
+GenericName[zh_CN]=QMake项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevtrollproject
 X-KDevelop-Version=1
