--- a/buildtools/script/kdevscriptproject.desktop
+++ b/buildtools/script/kdevscriptproject.desktop
@@ -3,29 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Scripting Language Project
+Comment[ca]=Projecte de llenguatge escrivint scripts
 Comment[da]=Scripting sprogprojekt
-Comment[de]=Skriptsprache-Projekt
+Comment[de]=Skriptsprachen-Projekt für KDevelop
 Comment[es]=Proyecto de lenguaje de guiones
+Comment[et]=Skriptikeele projekt
+Comment[fr]=Un module externe pour la gestion de projets avec les langages de scripts.
 Comment[hu]=Szkript-projekt
+Comment[it]=Progetto con linguaggio di scripting
+Comment[nl]=Scripttaal-project
 Comment[pt]=Projecto de uma Linguagem de 'Scripting'
 Comment[pt_BR]=Projeto de Linguagem de Script
-Comment[sr]=Пројекат скриптинг језика
+Comment[ru]=Проект скриптового языка
+Comment[sr]=Пројекат скриптног језика
 Comment[sv]=Projekt för skriptspråk
 Comment[xx]=xxScripting Language Projectxx
+Comment[zh_CN]=脚本语言项目
 Name=KDevScriptProject
-Name[de]=KDevScriptProjekt
+Name[de]=Skriptsprachen-Projekt (KDevelop)
 Name[sv]=KDevelop skriptprojekt
 Name[xx]=xxKDevScriptProjectxx
 GenericName=Scripting Language Project
+GenericName[ca]=Projecte de llenguatge escrivint scripts
 GenericName[da]=Scripting sprogprojekt
-GenericName[de]=Skriptsprache-Projekt
+GenericName[de]=Skriptsprachen-Projekt
 GenericName[es]=Proyecto de lenguaje de guiones
+GenericName[et]=Skriptikeele projekt
+GenericName[fr]=Projet avec langages scripts
 GenericName[hu]=szkriptprojekt
+GenericName[it]=Progetto con linguaggio di scripting
+GenericName[nl]=Scripttaal-project
 GenericName[pt]=Projecto de uma Linguagem de 'Scripting'
 GenericName[pt_BR]=Projeto de Linguagem de Script
-GenericName[sr]=Пројекат скриптинг језика
+GenericName[ru]=Проект скриптового языка
+GenericName[sr]=Пројекат скриптног језика
 GenericName[sv]=Projekt för skriptspråk
 GenericName[xx]=xxScripting Language Projectxx
+GenericName[zh_CN]=脚本语言项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevscriptproject
 X-KDevelop-Version=1
