--- a/languages/cpp/app_templates/dcopservice/dcopservice.desktop
+++ b/languages/cpp/app_templates/dcopservice/dcopservice.desktop
@@ -6,13 +6,21 @@ Exec=$APPNAMELC$
 X-DCOP-ServiceType=Unique
 X-KDE-StartupNotify=false
 Comment=Template for dcop services
+Comment[ca]=Plantilla per als serveis dcop
 Comment[da]=Skabelon for dcop-tjenester
+Comment[de]=Vorlage für DCOP-Dienste
+Comment[el]=Πρότυπο για υπηρεσίες dcop
 Comment[es]=Plantilla para servicios DCOP
+Comment[et]=DCOP teenuste mall
+Comment[fr]=Un modèle pour les services DCOP.
 Comment[hu]=Sablon DCOP-szolgáltatásokhoz
 Comment[it]=Modello per servizi dcop
+Comment[nl]=Sjabloon voor DCOP-services
 Comment[pt]=Modelo para serviços dcop
 Comment[pt_BR]=Modelo para serviços dcop
+Comment[ru]=Шаблон для сервисов dcop
 Comment[sr]=Шаблон за dcop сервисе
 Comment[sv]=Mall för DCOP-tjänster
 Comment[xx]=xxTemplate for dcop servicesxx
+Comment[zh_CN]=dcop服务模板
 
