--- a/languages/cpp/app_templates/kcmodule/module.desktop
+++ b/languages/cpp/app_templates/kcmodule/module.desktop
@@ -16,6 +16,7 @@ Comment[ru]=$APPNAME$ - модуль kcontrol
 Comment[sr]=$APPNAME$ — kcontrol модул
 Comment[sv]=$APPNAME$ - en modul i Inställningscentralen
 Comment[xx]=xx$APPNAME$ - a kcontrol modulexx
+Comment[zh_CN]=$APPNAME$ - 一个KDE控制中心模块
 Exec=kcmshell $APPNAMELC$
 Keywords=$APPNAME$,$APPNAMELC$
 Keywords[xx]=xx$APPNAME$,$APPNAMELC$xx
@@ -35,6 +36,7 @@ Name[ru]=Аплет $APPNAME$
 Name[sr]=$APPNAME$ аплет
 Name[sv]=Miniprogram $APPNAME$
 Name[xx]=xxThe $APPNAME$ appletxx
+Name[zh_CN]=$APPNAME$小程序
 Terminal=false
 Type=Application
 X-KDE-FactoryName=$APPNAME$
