--- a/languages/cpp/app_templates/kscreensaver/kscreensaver.desktop
+++ b/languages/cpp/app_templates/kscreensaver/kscreensaver.desktop
@@ -7,12 +7,21 @@ Icon=$APPNAMELC$
 Type=Application
 DocPath=$APPNAMELC$/$APPNAMELC$.html
 Comment=A KDE Screen Saver
+Comment[ca]=Un salvapantalles per a KDE
 Comment[da]=En KDE pauseskærm
+Comment[de]=Ein KDE-Bildschirmschoner
+Comment[el]=Μια προφύλαξη οθόνης του KDE
 Comment[es]=Un salvapantallas de KDE
+Comment[et]=KDE ekraanisäästja
+Comment[fr]=Un économiseur d'écran pour KDE.
 Comment[hu]=KDE képernyővédő
+Comment[it]=Uno screensaver per KDE
+Comment[nl]=Een KDE-screensaver
 Comment[pt]=Um protector de ecrã do KDE
 Comment[pt_BR]=Um Protetor de Tela do KDE
+Comment[ru]=Хранитель экрана KDE
 Comment[sr]=KDE-ов чувар екрана
 Comment[sv]=En skärmsläckare för KDE
 Comment[xx]=xxA KDE Screen Saverxx
+Comment[zh_CN]=一个KDE屏幕保护
 Terminal=0
