--- a/languages/cpp/pcsimporter/kdelibsimporter/kdevkdelibsimporter.desktop
+++ b/languages/cpp/pcsimporter/kdelibsimporter/kdevkdelibsimporter.desktop
@@ -1,16 +1,26 @@
 [Desktop Entry]
 Type=Service
 Name=KDevKDELibsImporter
-Name[de]=KDevKDELibsImportierer
+Name[de]=KDELIBS-PCS-Import (KDevelop)
 Name[sv]=KDevelop KDE-biblioteksimport
+Name[xx]=xxKDevKDELibsImporterxx
 Comment=KDevelop KDELibs PCS Importer
+Comment[ca]=Importador PCS de KDELibs per a KDevelop
 Comment[da]=KDevelop KDELibs PCS importør
-Comment[de]=KDevelop KDELibs-PCS-Importierer
+Comment[de]=KDELIBS-Import für persistenten Klassenspeicher
 Comment[es]=Importador de PCS de KDELibs de KDevelop
+Comment[et]=KDevelopi kdelibs PCS importija
+Comment[fr]=Un module externe pour l'importation PCS de KDELibs.
 Comment[hu]=KDevelop KDELibs PCS-importáló
+Comment[it]=Importatore per KDELibs PCS di KDevelop
+Comment[nl]=KDevelop PCS Importer voor KDELibs
+Comment[pt]=Importador de PCS das KDELibs do KDevelop
 Comment[pt_BR]=Importador PCS do KDELibs para o KDevelop
+Comment[ru]=Загрузка символов из библиотеки KDELibs в хранилище классов
 Comment[sr]=KDevelop-ов KDELibs PCS увозник
 Comment[sv]=KDevelop KDE-bibliotek PCS-import
+Comment[xx]=xxKDevelop KDELibs PCS Importerxx
+Comment[zh_CN]=KDevelop KDELibs PCS导入器
 Icon=gear
 ServiceTypes=KDevelop/PCSImporter
 X-KDE-Library=libkdevkdelibsimporter
