--- a/languages/fortran/compiler/pgioptions/kdevpgf77options.desktop
+++ b/languages/fortran/compiler/pgioptions/kdevpgf77options.desktop
@@ -3,11 +3,23 @@ Encoding=UTF-8
 Type=Service
 Exec=pgf77
 Comment=Portland Group Fortran77 Compiler
+Comment[ca]=Compilador Fortran 77 de Portland Group
+Comment[da]=Portland Group Fortran77 compiler
+Comment[es]=Compilador de Fortran 77 de Portland Group
+Comment[et]=Portland Group Fortran77 kompilaator
+Comment[fr]=Compilateur Fortran77 du Portland Group.
 Comment[hu]=Portland Group Fortran 77 fordítóprogram
+Comment[it]=Compilatore per Portland Group Fortran77
+Comment[nl]=Portland Group Fortran77-compiler
+Comment[pt]=Compilador de Fortran77 do Portland Group
 Comment[pt_BR]=Compilador Portland Group Fortran77
+Comment[ru]=Компилятор Portland Group Fortran77
+Comment[sr]=Fortran77 компајлер Portland Group-а
 Comment[sv]=Portland gruppens Fortran 77-kompilator
 Comment[xx]=xxPortland Group Fortran77 Compilerxx
+Comment[zh_CN]=Portland Group Fortran77编译器
 Name=Pgf77Options
+Name[de]=Pgf77-Einstellungen (KDevelop)
 Name[sv]=Alternativ för pgf77
 Name[xx]=xxPgf77Optionsxx
 ServiceTypes=KDevelop/CompilerOptions
