--- a/languages/java/app_templates/kappjava/app.desktop
+++ b/languages/java/app_templates/kappjava/app.desktop
@@ -7,13 +7,20 @@ Icon=$APPNAMELC$
 Type=Application
 DocPath=$APPNAMELC$/$APPNAMELC$.html
 Comment=A Java KDE KPart Application
+Comment[ca]=Una aplicació KPart en Java per a KDE
 Comment[da]=Et Java KDE KPart program
+Comment[de]=Eine KDE Komponten-Anwendung in Java
 Comment[es]=Una aplicación KPart en Java para KDE
+Comment[et]=Java KDE KPart rakendus
+Comment[fr]=Une application KPart en JAVA pour KDE
 Comment[hu]=Java-ban írt, KPart-alapú KDE-alkalmazás
 Comment[it]=Un'applicazione Java KDE KPart
+Comment[nl]=Een Java KDE KPart-toepassing
 Comment[pt]=Uma Aplicação KDE KPart em Java
 Comment[pt_BR]=Um Aplicativo KPart do KDE para Java
-Comment[sr]=Java KDE KPart апликација
+Comment[ru]=Приложение KPart для KDE на Java
+Comment[sr]=Java KDE KPart програм
 Comment[sv]=Ett Java KDE Kpart-program
 Comment[xx]=xxA Java KDE KPart Applicationxx
+Comment[zh_CN]=一个Java KDE KPart应用程序
 Terminal=0
