--- a/languages/java/debugger/kdevjavadebugger.desktop
+++ b/languages/java/debugger/kdevjavadebugger.desktop
@@ -3,29 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Java Debugger Frontend
+Comment[ca]=Entorn per al depurador de Java
 Comment[da]=Java fejlretter-forende
-Comment[de]=Java-Debugger-Benutzerschnittstelle
+Comment[de]=Java Debugger-Oberfläche für KDevelop
 Comment[es]=Entorno para el depurador de Java
+Comment[et]=Java siluja kasutajaliides
+Comment[fr]=Un module externe servant d'interface pour le débogueur Java.
 Comment[hu]=Grafikus kezelőfelület a Java-nyomkövetőhöz
+Comment[it]=Interfaccia per il Debugger di Java
+Comment[nl]=Schil voor Java-debugger
 Comment[pt]=Interface de Depuração Java
 Comment[pt_BR]=Frontend do Depurador Java
-Comment[sr]=Сучеље java програма за проналажење грешака
+Comment[ru]=Интегрированный отладчик Java
+Comment[sr]=Сучеље за проналажење грешака у Java програмима
 Comment[sv]=Gränssnitt för Java-avlusare
 Comment[xx]=xxJava Debugger Frontendxx
+Comment[zh_CN]=Java调试器前端
 Name=KDevJavaDebugger
-Name[de]=KDevJavaDebugger
+Name[de]=Java-Debugger (KDevelop)
 Name[sv]=KDevelop Java-avlusare
 Name[xx]=xxKDevJavaDebuggerxx
 GenericName=Java Debugger Frontend
+GenericName[ca]=Entorn per al depurador de Java
 GenericName[da]=Java fejlretter-forende
-GenericName[de]=Java-Debugger-Benutzerschnittstelle
+GenericName[de]=Java Debugger-Oberfläche
 GenericName[es]=Entorno para el depurador de Java
+GenericName[et]=Java siluja kasutajaliides
+GenericName[fr]=Interface du débogueur Java
 GenericName[hu]=grafikus Java-nyomkövető
+GenericName[it]=Interfaccia per il debugger di Java
+GenericName[nl]=Schil voor Java-debugger
 GenericName[pt]=Interface de Depuração para Java
 GenericName[pt_BR]=Frontend do Depurador Java
-GenericName[sr]=Сучеље java програма за проналажење грешака
+GenericName[ru]=Интегрированный отладчик Java
+GenericName[sr]=Сучеље за проналажење грешака у Java програмима
 GenericName[sv]=Gränssnitt för Java-avlusare
 GenericName[xx]=xxJava Debugger Frontendxx
+GenericName[zh_CN]=Java调试器前端
 Icon=
 ServiceTypes=KDevelop/Part
 X-KDE-Library=libkdevjavadebugger
