--- a/languages/pascal/compiler/dccoptions/kdevdccoptions.desktop
+++ b/languages/pascal/compiler/dccoptions/kdevdccoptions.desktop
@@ -3,17 +3,24 @@ Encoding=UTF-8
 Type=Service
 Exec=dcc
 Comment=Borland Delphi Compiler
+Comment[ca]=Compilador Delphi de Borland
 Comment[da]=Borland Delphi compiler
 Comment[de]=Borland Delphi-Compiler
 Comment[es]=Compilador de Delphi de Borland
+Comment[et]=Borland Delphi kompilaator
+Comment[fr]=Compilateur Delphi de Borland
 Comment[hu]=Borland Delphi fordítóprogram
+Comment[it]=Compilatore per Borland Delphi
+Comment[nl]=Borland Delphi-compiler
 Comment[pt]=Compilador de Borland Delphi
 Comment[pt_BR]=Compilador Delphi da Borland Delphi
-Comment[sr]=Borland ов Delphi компајлер
+Comment[ru]=Компилятор Borland Delphi
+Comment[sr]=Borland-ов Delphi компајлер
 Comment[sv]=Borland Delphi kompilator
 Comment[xx]=xxBorland Delphi Compilerxx
+Comment[zh_CN]=Borland Delphi编译器
 Name=DccOptions
-Name[de]=DccOptionen
+Name[de]=Delphi-Einstellungen (KDevelop)
 Name[sv]=Alternativ för dcc
 Name[xx]=xxDccOptionsxx
 ServiceTypes=KDevelop/CompilerOptions
