--- a/languages/pascal/compiler/fpcoptions/kdevfpcoptions.desktop
+++ b/languages/pascal/compiler/fpcoptions/kdevfpcoptions.desktop
@@ -3,17 +3,24 @@ Encoding=UTF-8
 Type=Service
 Exec=fpc
 Comment=Free Pascal Compiler
+Comment[ca]=Compilador Free Pascal
 Comment[da]=Free Pascal compiler
 Comment[de]=Free Pascal-Compiler
 Comment[es]=Compilador Free Pascal
+Comment[et]=Free Pascal kompilaator
+Comment[fr]=Compilateur Free Pascal.
 Comment[hu]=Szabad forráskódú Pascal fordítóprogram
+Comment[it]=Compilatore per Free Pascal
+Comment[nl]=Free Pascal-compiler
 Comment[pt]=Compilador Free Pascal
 Comment[pt_BR]=Compilador Free Pascal
-Comment[sr]=Бесплатан pascal компајлер
+Comment[ru]=Компилятор Free Pascal
+Comment[sr]=Free Pascal компајлер
 Comment[sv]=Fri Pascal-kompilator
 Comment[xx]=xxFree Pascal Compilerxx
+Comment[zh_CN]=Free Pascal编译器
 Name=FpcOptions
-Name[de]=FpcOptionen
+Name[de]=Fpc-Einstellungen (KDevelop)
 Name[sv]=Alternativ för fpc
 Name[xx]=xxFpcOptionsxx
 ServiceTypes=KDevelop/CompilerOptions
