--- a/parts/appwizard/common/kde-app.desktop
+++ b/parts/appwizard/common/kde-app.desktop
@@ -7,14 +7,21 @@ Icon=$APPNAMELC$
 Type=Application
 DocPath=$APPNAMELC$/$APPNAMELC$.html
 Comment=A KDE KPart Application
+Comment[ca]=Una aplicació KPart per a KDE
 Comment[da]=Et KDE KPart program
-Comment[de]=Eine KDE-KPart-Anwendung
+Comment[de]=Eine KDE-Komponenten-Anwendung
+Comment[el]=Μια εφαρμογή KPart του KDE
 Comment[es]=Una aplicación KPart de KDE
+Comment[et]=KDE KPart rakendus
+Comment[fr]=Une application KPart pour KDE.
 Comment[hu]=KPart-alapú KDE-alkalmazás
 Comment[it]=Applicazione KPart di KDE
+Comment[nl]=Een KDE KPart-toepassing
 Comment[pt]=Uma aplicação KPart do KDE
 Comment[pt_BR]=Um Aplicativo KPart do KDE
-Comment[sr]=KDE KPart апликација
+Comment[ru]=Приложение KPart для KDE
+Comment[sr]=KDE KPart програм
 Comment[sv]=Ett KDE Kpart-program
 Comment[xx]=xxA KDE KPart Applicationxx
+Comment[zh_CN]=一个KDE KPart应用程序
 Terminal=0
