--- a/parts/appwizard/kdevappwizard.desktop
+++ b/parts/appwizard/kdevappwizard.desktop
@@ -3,29 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Application Wizard
+Comment[ca]=Assistent d'aplicacions
 Comment[da]=Program-guide
-Comment[de]=Anwendungsassistent
+Comment[de]=Anwendungs-Assistent für KDevelop
 Comment[es]=Asistente de aplicaciones
+Comment[et]=Rakenduse nõustaja
+Comment[fr]=Un module externe pour la gestion de l'assistant de création d'application.
 Comment[hu]=Alkalmazásvarázsló
+Comment[it]=Wizard di applicazione
+Comment[nl]=Applicatie-assistent
 Comment[pt]=Assistente de Aplicações
 Comment[pt_BR]=Assistente de Aplicativo
-Comment[sr]=Чаробњак за апликације
+Comment[ru]=Мастер создания приложений
+Comment[sr]=Чаробњак за програме
 Comment[sv]=Programguide
 Comment[xx]=xxApplication Wizardxx
+Comment[zh_CN]=应用程序向导
 Name=KDevAppWizard
-Name[de]=KDevAnwAssistent
+Name[de]=Anwendungs-Assistent (KDevelop)
 Name[sv]=KDevelop programguide
 Name[xx]=xxKDevAppWizardxx
 GenericName=Application Wizard
+GenericName[ca]=Assistent d'aplicacions
 GenericName[da]=Program-guide
-GenericName[de]=Anwendungsassistent
+GenericName[de]=Anwendungs-Assistent
 GenericName[es]=Asistente de aplicaciones
+GenericName[et]=Rakenduse nõustaja
+GenericName[fr]=Création d'application
 GenericName[hu]=Alkalmazásvarázsló
+GenericName[it]=Wizard di applicazione
+GenericName[nl]=Applicatie-assistent
 GenericName[pt]=Assistente de Aplicações
 GenericName[pt_BR]=Assistente de Aplicativo
-GenericName[sr]=Чаробњак за апликације
+GenericName[ru]=Мастер создания приложений
+GenericName[sr]=Чаробњак за програме
 GenericName[sv]=Programguide
 GenericName[xx]=xxApplication Wizardxx
+GenericName[zh_CN]=应用程序向导
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevappwizard
 X-KDevelop-Scope=Core
