--- a/parts/classbrowser/kdevpart_classbrowser.desktop
+++ b/parts/classbrowser/kdevpart_classbrowser.desktop
@@ -3,27 +3,40 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=ClassBrowser
-Comment[de]=Klassenbrowser
+Comment[ca]=Navegador de classes
+Comment[de]=Klassen-Browser für KDevelop
 Comment[es]=Navegador de clases
+Comment[et]=Klasside lehitseja
+Comment[fr]=Un module externe pour la gestion de l'afficheur de classes.
 Comment[hu]=Osztályböngésző
+Comment[it]=Browser delle classi
+Comment[nl]=Klassenbrowser
 Comment[pt]=Navegador de Classes
 Comment[pt_BR]=Navegador de Classe
+Comment[ru]=Просмотр классов
 Comment[sr]=Претраживач класа
 Comment[sv]=Klassbläddrare
 Comment[xx]=xxClassBrowserxx
+Comment[zh_CN]=类浏览器
 Name=KDevClassBrowser
-Name[de]=KDevKlassenBrowser
+Name[de]=Klassen-Browser (KDevelop)
 Name[sv]=KDevelop klassbläddrare
 Name[xx]=xxKDevClassBrowserxx
 GenericName=ClassBrowser
-GenericName[de]=Klassenbrowser
+GenericName[ca]=Navegador de classes
+GenericName[de]=Klassen-Browser
 GenericName[es]=Navegador de clases
+GenericName[et]=Klasside lehitseja
+GenericName[fr]=Afficheur de classes
 GenericName[hu]=osztályböngésző
+GenericName[nl]=Klassenbrowser
 GenericName[pt]=Navegador de Classes
 GenericName[pt_BR]=Navegador de Classe
+GenericName[ru]=Просмотр классов
 GenericName[sr]=Претраживач класа
 GenericName[sv]=Klassbläddrare
 GenericName[xx]=xxClassBrowserxx
+GenericName[zh_CN]=类浏览器
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Project
