--- a/parts/diff/kdevdiff.desktop
+++ b/parts/diff/kdevdiff.desktop
@@ -3,29 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Difference Viewer
+Comment[ca]=Visor de diferències
 Comment[da]=Forskel-viser
-Comment[de]=Differenzanzeiger
+Comment[de]=Abweichungsansicht für KDevelop
 Comment[es]=Visor de diferencias
+Comment[et]=Erinevuste näitaja
+Comment[fr]=Un module externe pour la gestion de l'afficheur de différences.
 Comment[hu]=Fájlok közötti eltérések megjelenítése
+Comment[it]=Visualizzatore di differenze
+Comment[nl]=Weergave van verschillen
 Comment[pt]=Visualizador de Diferenças
 Comment[pt_BR]=Visualizador de Diferenças
+Comment[ru]=Просмотрщик различий
 Comment[sr]=Програм за прегледање разлика
 Comment[sv]=Visning av jämförelser
 Comment[xx]=xxDifference Viewerxx
+Comment[zh_CN]=差别查看器
 Name=KDevDiff
-Name[de]=KDevDiff
+Name[de]=Abweichungsansicht (KDevelop)
 Name[sv]=KDevelop jämför
 Name[xx]=xxKDevDiffxx
 GenericName=Difference Viewer
+GenericName[ca]=Visor de diferències
 GenericName[da]=Forskel-viser
-GenericName[de]=Differenzanzeiger
+GenericName[de]=Abweichungsansicht
 GenericName[es]=Visor de diferencias
+GenericName[et]=Erinevuste näitaja
+GenericName[fr]=Afficheur de différences
 GenericName[hu]=diff-megjelenítő
+GenericName[it]=Visualizzatore delle differenze
+GenericName[nl]=Weergave van verschillen
 GenericName[pt]=Visualizador de Diferenças
 GenericName[pt_BR]=Visualizador de Diferenças
+GenericName[ru]=Просмотр различий
 GenericName[sr]=Програм за прегледање разлика
 GenericName[sv]=Visning av jämförelser
 GenericName[xx]=xxDifference Viewerxx
+GenericName[zh_CN]=差别查看器
 ServiceTypes=KDevelop/DiffFrontend
 X-KDE-Library=libkdevdiff
 X-KDevelop-Version=1
