--- a/parts/doctreeview/chm/kchmpart.desktop
+++ b/parts/doctreeview/chm/kchmpart.desktop
@@ -2,18 +2,25 @@
 Type=Service
 Exec=foobar
 Comment=Embeddable HTMLHelp Viewer
+Comment[ca]=Visor encastat de l'ajuda HTML
 Comment[da]=Indlejrbar HTMLHelp-fremviser
-Comment[de]=Einbettbarer HTML-Hilfe-Anzeiger
+Comment[de]=Eingebetteter Betrachter für HTMLHelp
 Comment[es]=Visor de ayuda HTML empotrable
+Comment[et]=Põimitav HTML-abifailide näitaja
+Comment[fr]=Visionneur intégré d'aide HTML
 Comment[hu]=Beágyazható HTML-es dokumentációnézegető
+Comment[it]=Visualizzatore integrabile per la guida HTML
+Comment[nl]=Ingebedde HTML Helpweergave
 Comment[pt]=Visualizador de HTMLHelp Embebível
 Comment[pt_BR]=Visualizador de Ajuda HTML Embutido
-Comment[sr]=Програм за прегледање утискујуће HTML помоћи
+Comment[ru]=Встроенный просмотр HTMLHelp
+Comment[sr]=Уградиви приказивач HTMLHelp-а
 Comment[sv]=Inbäddningsbar HTML-hjälpvisning
 Comment[xx]=xxEmbeddable HTMLHelp Viewerxx
+Comment[zh_CN]=嵌入的HTML帮助查看器
 MimeType=application/chm
 Name=KChmPart
-Name[de]=KChmPart
+Name[de]=Chm-Betrachter (KDevelop)
 Name[sv]=Kchm-del
 Name[xx]=xxKChmPartxx
 ServiceTypes=KParts/ReadOnlyPart,Browser/View
