--- a/parts/filecreate/kdevpart_filecreate.desktop
+++ b/parts/filecreate/kdevpart_filecreate.desktop
@@ -3,25 +3,39 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=FileCreate
-Comment[de]=Dateierstellung
+Comment[ca]=Creació de fitxers
+Comment[de]=Eine Komponeten, die Unterstützung bei der Erstellung von Dateien bietet
 Comment[es]=Creación de archivos
+Comment[fr]=Un module externe pour la création de fichier.
 Comment[hu]=Fájl létrehozása
+Comment[it]=Crea file
+Comment[nl]=Bestand aanmaken
 Comment[pt]=Criação de Ficheiros
+Comment[ru]=Мастер создания файлов
 Comment[sr]=Направи фајл
 Comment[sv]=Skapa filer
+Comment[ta]= கோப்பு உருவாக்கப்பட்டது
 Comment[xx]=xxFileCreatexx
+Comment[zh_CN]=文件创建
 Name=KDevFileCreate
-Name[de]=KDevDateiErstellung
+Name[de]=Dateierstellungs-Komponente (KDevelop)
 Name[sv]=KDevelop skapa filer
 Name[xx]=xxKDevFileCreatexx
 GenericName=FileCreate
-GenericName[de]=Dateierstellung
+GenericName[ca]=Creació de fitxers
+GenericName[de]=Dateierstellungs-Komponente
 GenericName[es]=Creación de archivos
+GenericName[fr]=Création de fichier
 GenericName[hu]=fájllétrehozás
+GenericName[it]=Crea file
+GenericName[nl]=Bestand aanmaken
 GenericName[pt]=Criação de Ficheiros
+GenericName[ru]=Мастер создания файлов
 GenericName[sr]=Направи фајл
 GenericName[sv]=Skapa filer
+GenericName[ta]=கோப்பு உருவக்கம்
 GenericName[xx]=xxFileCreatexx
+GenericName[zh_CN]=文件创建
 Icon=kdevelop
 ServiceTypes=KDevelop/CreateFile
 X-KDE-Library=libkdevfilecreate
