--- a/parts/fullscreen/kdevpart_fullscreen.desktop
+++ b/parts/fullscreen/kdevpart_fullscreen.desktop
@@ -3,30 +3,42 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=FullScreen
+Comment[ca]=Pantalla completa
 Comment[da]=Fuldskærm
 Comment[de]=Vollbild
 Comment[es]=Pantalla completa
+Comment[fr]=Un module externe pour la gestion du plein écran.
 Comment[hu]=Teljes képernyős
+Comment[it]=Schermo pieno
+Comment[nl]=Volledig scherm
 Comment[pt]=Todo o Ecrã
 Comment[pt_BR]=Tela Cheia
+Comment[ru]=Полноэкранный режим
 Comment[sr]=Преко целог екрана
 Comment[sv]=Fullskärm
 Comment[xx]=xxFullScreenxx
+Comment[zh_CN]=全屏
 Name=KDevFullScreen
-Name[de]=KDevVollbild
+Name[de]=Vollbild (KDevelop)
 Name[sv]=KDevelop fullskärm
 Name[xx]=xxKDevFullScreenxx
 GenericName=FullScreen
+GenericName[ca]=Pantalla completa
 GenericName[da]=Fuldskærm
 GenericName[de]=Vollbild
 GenericName[es]=Pantalla completa
+GenericName[et]=Täisekraan
+GenericName[fr]=Gestion du plein écran
 GenericName[hu]=teljes képernyős
 GenericName[it]=Schermo pieno
+GenericName[nl]=Volledig scherm
 GenericName[pt]=Todo o Ecrã
 GenericName[pt_BR]=Tela Cheia
+GenericName[ru]=Полноэкранный режим
 GenericName[sr]=Преко целог екрана
 GenericName[sv]=Fullskärm
 GenericName[xx]=xxFullScreenxx
+GenericName[zh_CN]=全屏
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Core
