--- a/parts/knotes/kdevpart_notes.desktop
+++ b/parts/knotes/kdevpart_notes.desktop
@@ -2,30 +2,43 @@
 Type=Service
 Exec=blubb
 Comment=KNotes Plugin
+Comment[ca]=Connector de KNotes
 Comment[da]=KNotes plugin
-Comment[de]=KNotes-Plugin
+Comment[de]=KNotes-Komponente für KDevelop
 Comment[es]=Plugin de KNotes
+Comment[et]=KNotesi plugin
+Comment[fr]=Un module externe pour la gestion des annotations via le programme « KNotes ».
 Comment[hu]=KNotes-bővítőmodul
+Comment[it]=Plugin per KNotes
+Comment[nl]=KNotes-plugin
 Comment[pt]='Plugin' do KNotes
 Comment[pt_BR]=Plugin do KNotes
-Comment[sr]=Прикључак за knotes
+Comment[ru]=Модуль KNotes
+Comment[sr]=Додатак за KNotes
 Comment[sv]=Insticksprogram för anteckningar
 Comment[xx]=xxKNotes Pluginxx
+Comment[zh_CN]=KNotes插件
 Name=KDevNotes
-Name[de]=KDevNotes
+Name[de]=KNotes-Komponente (KDevelop)
 Name[sv]=KDevelop anteckningar
 Name[xx]=xxKDevNotesxx
 GenericName=KNotes Plugin
+GenericName[ca]=Connector de KNotes
 GenericName[da]=KNotes plugin
-GenericName[de]=KNotes-Plugin
+GenericName[de]=KNotes-Komponente
 GenericName[es]=Plugin de KNotes
+GenericName[et]=KNotesi plugin
+GenericName[fr]=Gestion des annotations
 GenericName[hu]=KNotes-bővítőmodul
 GenericName[it]=Plugin per KNotes
+GenericName[nl]=KNotes-plugin
 GenericName[pt]='Plugin' do KNotes
 GenericName[pt_BR]=Plugin do KNotes
-GenericName[sr]=Прикључак за knotes
+GenericName[ru]=Модуль KNotes
+GenericName[sr]=Додатак за KNotes
 GenericName[sv]=Insticksprogram för anteckningar
 GenericName[xx]=xxKNotes Pluginxx
+GenericName[zh_CN]=KNotes插件
 Icon=knotes
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevnotes
