--- a/parts/outputviews/kdevappoutputview.desktop
+++ b/parts/outputviews/kdevappoutputview.desktop
@@ -3,29 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Application Output View
+Comment[ca]=Visor de l'eixida de les aplicacions
 Comment[da]=Program-uddata fremvisning
-Comment[de]=Anwendungsausgabeansicht
+Comment[de]=Anwendungsausgabe für KDevelop
 Comment[es]=Visor de la salida de las aplicaciones
+Comment[et]=Rakenduse väljundi vaade
+Comment[fr]=Un module externe pour la gestion de l'affichage des messages texte d'une application.
 Comment[hu]=Alkalmazáskimenet-megjelenítő
+Comment[it]=Vista dell'output dell'applicazione
+Comment[nl]=Weergave van toepassingsuitvoer
 Comment[pt]=Vista do Resultado da Aplicação
 Comment[pt_BR]=Visão da Saída do Aplicativo
+Comment[ru]=Окно вывода приложения
 Comment[sr]=Приказ излаза апликације
 Comment[sv]=Programutmatningsvy
 Comment[xx]=xxApplication Output Viewxx
+Comment[zh_CN]=应用程序输出查看器
 Name=KDevAppOutputView
-Name[de]=KDevAppAusgabeAnsicht
+Name[de]=Anwendungsausgabe (KDevelop)
 Name[sv]=KDevelop programutmatningsvy
 Name[xx]=xxKDevAppOutputViewxx
 GenericName=Application Output View
+GenericName[ca]=Visor de l'eixida de les aplicacions
 GenericName[da]=Program-uddata fremvisning
-GenericName[de]=Anwendungsausgabeansicht
+GenericName[de]=Anwendungsausgabe
 GenericName[es]=Visor de la salida de las aplicaciones
+GenericName[et]=Rakenduse väljundi vaade
+GenericName[fr]=Messages d'une application
 GenericName[hu]=alkalmazáskimenet-megjelenítő
+GenericName[it]=Visualizza l'output dell'applicazione
+GenericName[nl]=Weergave van toepassingsuitvoer
 GenericName[pt]=Vista do Resultado da Aplicação
 GenericName[pt_BR]=Visão da Saída do Aplicativo
+GenericName[ru]=Окно вывода приложения
 GenericName[sr]=Приказ излаза апликације
 GenericName[sv]=Programutmatningsvy
 GenericName[xx]=xxApplication Output Viewxx
+GenericName[zh_CN]=应用程序输出查看器
 Icon=exec
 ServiceTypes=KDevelop/AppFrontend
 X-KDE-Library=libkdevoutputviews
