--- a/parts/outputviews/kdevmakeview.desktop
+++ b/parts/outputviews/kdevmakeview.desktop
@@ -3,29 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Compiler Frontend
+Comment[ca]=Entorn per al compilador
 Comment[da]=Kompiler forende
-Comment[de]=Compiler-Benutzerschnittstelle
+Comment[de]=Make-Ausgabe für KDevelop
 Comment[es]=Entorno para el compilador
+Comment[et]=Kompilaatori kasutajaliides
+Comment[fr]=Un module externe pour la gestion de l'interface avec un compilateur.
 Comment[hu]=Grafikus kezelőprogram fordítóprogramokhoz
+Comment[it]=Interfaccia al compilatore
+Comment[nl]=Compiler-frontend
 Comment[pt]=Interface de Compilador
 Comment[pt_BR]=Frontend do Compilador
+Comment[ru]=Интерфейс к компилятору
 Comment[sr]=Сучеље компајлера
 Comment[sv]=Kompilatorgränssnitt
 Comment[xx]=xxCompiler Frontendxx
+Comment[zh_CN]=编译器前端
 Name=KDevMakeView
-Name[de]=KDevMakeAnsicht
+Name[de]=Make-Ausgabe (KDevelop)
 Name[sv]=KDevelop byggvy
 Name[xx]=xxKDevMakeViewxx
 GenericName=Compiler Frontend
+GenericName[ca]=Entorn per al compilador
 GenericName[da]=Kompiler forende
-GenericName[de]=Compiler-Benutzerschnittstelle
+GenericName[de]=Make-Ausgabe
 GenericName[es]=Entorno para el compilador
+GenericName[et]=Kompilaatori kasutajaliides
+GenericName[fr]=Interface pour compilateur
 GenericName[hu]=grafikus kezelőfelület fordítóprogramokhoz
+GenericName[it]=Interfaccia al compilatore
+GenericName[nl]=Compiler-frontend
 GenericName[pt]=Interface de Compilador
 GenericName[pt_BR]=Frontend do Compilador
+GenericName[ru]=Интерфейс к компилятору
 GenericName[sr]=Сучеље компајлера
 GenericName[sv]=Kompilatorgränssnitt
 GenericName[xx]=xxCompiler Frontendxx
+GenericName[zh_CN]=编译器前端
 Icon=konsole
 ServiceTypes=KDevelop/MakeFrontend
 X-KDE-Library=libkdevoutputviews
