--- a/parts/sourcenav/kdevpart_sourcenav.desktop
+++ b/parts/sourcenav/kdevpart_sourcenav.desktop
@@ -3,28 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Source Code Navigation
+Comment[ca]=Navegació a través del codi font
 Comment[da]=Kildekode navigation
-Comment[de]=Quellcodenavigation
+Comment[de]=Quelltext-Navigation für KDevelop
 Comment[es]=Navegación del código fuente
+Comment[et]=Lähtekoodis liikumine
+Comment[fr]=Un module externe pour la gestion d'un navigateur du code source.
 Comment[hu]=Forráskód-navigáció
+Comment[it]=Navigatore per codice sorgente
+Comment[nl]=Navigatie door broncode
+Comment[pt]=Navegação no Código-Fonte
 Comment[pt_BR]=Navegação de Código Fonte
-Comment[sr]=Навигација изворног кода
+Comment[ru]=Навигация по исходному коду
+Comment[sr]=Навигација изворним кодом
 Comment[sv]=Källkodsnavigering
 Comment[xx]=xxSource Code Navigationxx
+Comment[zh_CN]=源代码浏览
 Name=KDevSourceNav
-Name[de]=KDevQuellcodeNav
+Name[de]=Quelltextnavigator-Komponente (KDevelop)
 Name[sv]=KDevelop källkodsnavigering
 Name[xx]=xxKDevSourceNavxx
 GenericName=Source Code Navigation
+GenericName[ca]=Navegació a través del codi font
 GenericName[da]=Kildekode navigation
-GenericName[de]=Quellcodenavigation
+GenericName[de]=Quelltext-Navigator
 GenericName[es]=Navegación del código fuente
+GenericName[et]=Lähtekoodis liikumine
+GenericName[fr]=Navigation dans le code source
 GenericName[hu]=forráskód-navigáció
+GenericName[it]=Navigazione nel codice sorgente
+GenericName[nl]=Navigatie door broncode
 GenericName[pt]=Navegação no Código Fonte
 GenericName[pt_BR]=Navegação de Código Fonte
-GenericName[sr]=Навигација изворног кода
+GenericName[ru]=Навигация по исходному коду
+GenericName[sr]=Навигација изворним кодом
 GenericName[sv]=Källkodsnavigering
 GenericName[xx]=xxSource Code Navigationxx
+GenericName[zh_CN]=源代码浏览
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevsourcenav
