--- a/vcs/cervisia/kdevcervisia.desktop
+++ b/vcs/cervisia/kdevcervisia.desktop
@@ -3,29 +3,46 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Cervisia Integration
+Comment[ca]=Integració amb Cervisia
 Comment[da]=Cervisia integration
-Comment[de]=Cervisia-Integration
+Comment[de]=Cervisia-Unterstützung für KDevelop
 Comment[es]=Integración con Cervisia
+Comment[et]=Cervisia põimimine
+Comment[fr]=Un module externe intégrant le programme « Cervisia ».
 Comment[hu]=Cervisia-integráció
+Comment[it]=Integrazione per Cervisia
+Comment[nl]=Cervisia integratie
 Comment[pt]=Integração com Cervisia
 Comment[pt_BR]=Integração com o Cervisia
-Comment[sr]=Интеграција Cervisia-е
+Comment[ru]=Интеграция Cervisia
+Comment[sr]=Интеграција Cervisia-је
 Comment[sv]=Integrering av Cervisia
+Comment[xx]=xxCervisia Integrationxx
+Comment[zh_CN]=Cervisia集成
 Name=CervisiaPart
-Name[de]=CervisiaPart
+Name[de]=Cervisia-Unterstützung
+Name[et]=Cervisia komponent
 Name[hu]=Cervisia objektum
 Name[pt_BR]=Parte Cervisia
 Name[sv]=Cervisiadel
+Name[xx]=xxCervisiaPartxx
 GenericName=Cervisia Integration
+GenericName[ca]=Integració amb Cervisia
 GenericName[da]=Cervisia integration
-GenericName[de]=Cervisia-Integration
+GenericName[de]=Cervisia-Unterstützung
 GenericName[es]=Integración con Cervisia
+GenericName[et]=Cervisia põimimine
+GenericName[fr]=Intégration de « Cervisia »
 GenericName[hu]=Cervisia-integráció
 GenericName[it]=Integrazione Cervisia
+GenericName[nl]=Cervisia-integratie
 GenericName[pt]=Integração com o Cervisia
 GenericName[pt_BR]=Integração com o Cervisia
-GenericName[sr]=Интеграција Cervisia-е
+GenericName[ru]=Интеграция Cervisia
+GenericName[sr]=Интеграција Cervisia-је
 GenericName[sv]=Integrering av Cervisia
+GenericName[xx]=xxCervisia Integrationxx
+GenericName[zh_CN]=Cervisia集成
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevcervisia
 X-KDevelop-Scope=Global
