--- a/vcs/cvsservice/kdevcvsservice.desktop
+++ b/vcs/cvsservice/kdevcvsservice.desktop
@@ -8,31 +8,41 @@ Comment[da]=CVS Integration ved brug af Cervisia's cvsservice (behøver KDE 3.2)
 Comment[de]=CVS-Integration mit Hilfe von Cervisia's cvsservice (ab KDE 3.2). http://www.kde.org/apps/cervisia/
 Comment[es]=Integración con CVS utilizando el cvsservice de Cervisia (necesita KDE 3.2). http://www.kde.org/apps/cervisia/
 Comment[et]=CVS põimimine Cervisia cvsservice'i abil (vajab KDE 3.2) http://www.kde.org/apps/cervisia/
+Comment[fr]=Un module externe pour l'intégration du service CVS via le programme « Cervisia » (nécessite KDE 3.2).
 Comment[hu]=CVS-integráció a Cervisia cvsservice segítségével (KDE 3.2-től) http://www.kde.org/apps/cervisia/
 Comment[it]=Integrazione CVS utilizzando il cvsservice di Cervisia (richiede KDE 3.2) http://www.kde.org/apps/cervisia/
+Comment[nl]=CVS-integratie via Cervisia's cvsservice (alleen KDE 3.2). Zie http://www.kde.org/apps/cervisia/
 Comment[pt]=A integração do CVS usando o serviço de CVS do Cervisia (necessita do KDE 3.2) http://www.kde.org/apps/cervisia/
 Comment[pt_BR]=Integração com o CVS usando o cvsservice do Cervisia (precisa do KDE 3.2) http://www.kde.org/apps/cervisia/
+Comment[ru]=Интеграция CVS с использованием Cervisia cvsservice (требует KDE 3.2). http://www.kde.org/apps/cervisia/
 Comment[sr]=Интеграција CVS-а користећи Cervisia-jин cvsservice (захтева KDE 3.2) http://www.kde.org/apps/cervisia/
 Comment[sv]=Integrering av CVS med användning av Cervisias CVS-tjänst (kräver KDE 3.2) http://www.kde.org/apps/cervisia/
 Comment[xx]=xxCVS Integration using Cervisia's cvsservice (needs KDE 3.2) http://www.kde.org/apps/cervisia/xx
+Comment[zh_CN]=使用Cervisia的cvsservice的CVS集成(需要KDE 3.2) http://www.kde.org/apps/cervisia/
 Name=CvsService
 Name[ca]=Servei de CVS
+Name[de]=CVSService-Unterstützung (KDevelop)
+Name[el]=Cvs υπηρεσία
 Name[sr]=CvsServicе
 Name[sv]=CVS-tjänst
 Name[xx]=xxCvsServicexx
 GenericName=CVS Integration using Cervisia's cvsservice
 GenericName[ca]=Integració amb el CVS emprant el cvsservice de Cervisia
 GenericName[da]=CVS Integration ved brug af Cervisia's cvsservice
-GenericName[de]=CVS-Integration mit Hilfe von Cervisia's cvsservice
+GenericName[de]=CVSService-Unterstützung
 GenericName[es]=Integración con CVS utilizando el cvsservice de Cervisia
 GenericName[et]=CVS põimimine Cervisia cvsservice'i abil
+GenericName[fr]=Intégration du service CVS
 GenericName[hu]=CVS-integráció a Cervisia cvsservice-en keresztül
 GenericName[it]=Integrazione CVS tramite cvsservice di Cervisia
+GenericName[nl]=CVS-integratie via Cervisia's cvsservice
 GenericName[pt]=Integração com o CVS usando o cvsservice do Cervisia
 GenericName[pt_BR]=Integração com o CVS usando o cvsservice do Cervisia
+GenericName[ru]=Интеграция CVS с использованием Cervisia cvsservice
 GenericName[sr]=Интеграција CVS-а користећи Cervisia-jин cvsservice
-GenericName[sv]=Integrering av CVS med användning av Cervisias CVS-tjänst
+GenericName[sv]=Integrering av CVS med Cervisiatjänst
 GenericName[xx]=xxCVS Integration using Cervisia's cvsservicexx
+GenericName[zh_CN]=使用Cervisia's cvsservice的CVS集成
 Icon=kdev_cvs
 ServiceTypes=KDevelop/VersionControl
 X-KDE-Library=libkdevcvsservice
