--- a/buildtools/autotools/kdevkdeautoproject.desktop
+++ b/buildtools/autotools/kdevkdeautoproject.desktop
@@ -3,31 +3,46 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=KDE Automake Project
+Comment[ca]=Projecte Automake per a KDE
 Comment[da]=KDE Automake projekt
-Comment[de]=KDE Automake-Projekt
+Comment[de]=KDE Automake-Projekt für KDevelop
+Comment[el]=Εργασία KDE Automake
 Comment[es]=Projecto de Automake de KDE
+Comment[et]=KDE automake'i projekt
+Comment[fr]=Un module externe pour la gestion de projet avec le programme « Automake » pour les applications KDE.
 Comment[hu]=KDE Automake-projekt
+Comment[it]=Progetto KDE per automake
+Comment[nl]=KDE Automake-project
 Comment[pt]=Projecto Automake do KDE
 Comment[pt_BR]=Projeto Automake do KDE
-Comment[sr]=KDE-ов automake пројекат
+Comment[ru]=Проект KDE Automake
+Comment[sr]=KDE-ов Automake пројекат
 Comment[sv]=KDE Automake-projekt
 Comment[xx]=xxKDE Automake Projectxx
+Comment[zh_CN]=KDE Automake项目
 Name=KDevKDEAutoProject
-Name[de]=KDevKDEAutoProjekt
+Name[de]=KDE-Automake-Projekt (KDevelop)
 Name[pt_BR]=KDevKDEAutoProjeto
 Name[sv]=KDevelop KDE-autoprojekt
 Name[xx]=xxKDevKDEAutoProjectxx
 GenericName=KDE Automake Project
+GenericName[ca]=Projecte Automake per a KDE
 GenericName[da]=KDE Automake projekt
 GenericName[de]=KDE Automake-Projekt
+GenericName[el]=Εργασία KDE Automake
 GenericName[es]=Projecto de Automake de KDE
+GenericName[et]=KDE automake'i projekt
+GenericName[fr]=Projet avec Automake pour KDE
 GenericName[hu]=KDE Automake-projekt
 GenericName[it]=Progetto KDE Automake
+GenericName[nl]=KDE Automake-project
 GenericName[pt]=Projecto KDE com Automake
 GenericName[pt_BR]=Projeto Automake do KDE
-GenericName[sr]=KDE-ов automake пројекат
+GenericName[ru]=Проект KDE Automake
+GenericName[sr]=KDE-ов Automake пројекат
 GenericName[sv]=KDE Automake-projekt
 GenericName[xx]=xxKDE Automake Projectxx
+GenericName[zh_CN]=KDE Automake项目
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevautoproject
 X-KDevelop-Version=1
