--- a/kdevelop.desktop
+++ b/kdevelop.desktop
@@ -10,6 +10,20 @@ Terminal=0
 Name=KDevelop
 Name[xx]=xxKDevelopxx
 GenericName=Integrated Development Environment
+GenericName[da]=Integreret udviklingsmiljø
+GenericName[de]=Integrierte Entwicklungsumgebung
+GenericName[es]=Entorno de desarrollo integrado
+GenericName[et]=Integreeritud arenduskeskkond
+GenericName[fr]=Environnement de développement intégré
+GenericName[hu]=fejlesztőkörnyezet
+GenericName[it]=Ambiente di sviluppo integrato
+GenericName[nl]=Geïntegreerde programmeeromgeving
+GenericName[pt]=Ambiente de Desenvolvimento Integrado
+GenericName[pt_BR]=IDE - Ambiente de Desenvolvimento Integrado
+GenericName[ru]=Интегрированная среда разработки
+GenericName[sr]=Интегрисано развојно окружење
+GenericName[sv]=Integrerad utvecklingsmiljö
+GenericName[zh_CN]=集成开发环境
 X-DCOP-ServiceType=Multi
 Categories=Qt;KDE;Development
 
