--- a/languages/cpp/app_templates/kbearimportfilter/kbearimportfilter.desktop
+++ b/languages/cpp/app_templates/kbearimportfilter/kbearimportfilter.desktop
@@ -4,4 +4,20 @@ Type=Service
 ServiceTypes=KBear/SiteImportFilter
 X-KDE-Library=libkbear$APPNAMELC$importfilter
 Name=$APPNAME$ Import Filter
+Name[ca]=Filtre d'importació per a $APPNAME$
+Name[da]=$APPNAME$ importfilter
+Name[de]=$APPNAME$ Import-Filter
+Name[es]=Filtro de importación de $APPNAME$
+Name[et]=$APPNAME$-i importfilter
+Name[fr]=Filtre d'importation de $APPNAME$
+Name[hu]=$APPNAME$ importszűrő
+Name[it]=Filtro di importazione per $APPNAME$
+Name[nl]=$APPNAME$ importfilter
+Name[pt]=Filtro de Importação do $APPNAME$
+Name[pt_BR]=Filrto de Importação do $APPNAME$
+Name[ru]=$APPNAME$ фильтр импорта
+Name[sr]=$APPNAME$ увозни филтер
+Name[sv]=$APPNAME$ importfilter
+Name[xx]=xx$APPNAME$ Import Filterxx
+Name[zh_CN]=$APPNAME$导入过滤器
 X-KBear-ImportFile=sitemanager
