--- a/languages/cpp/app_templates/khello/app.desktop
+++ b/languages/cpp/app_templates/khello/app.desktop
@@ -6,12 +6,21 @@ Exec=$APPNAMELC$
 Icon=$APPNAMELC$
 Type=Application
 Comment=A simple KDE Application
+Comment[ca]=Una simple aplicació KDE
 Comment[da]=Et simpelt KDE program
+Comment[de]=Eine einfache KDE-Anwendung
+Comment[el]=Μια απλή εφαρμογή του KDE
 Comment[es]=Una aplicación de KDE sencilla
+Comment[et]=Lihtne KDE rakendus
+Comment[fr]=Une application simple pour KDE.
 Comment[hu]=Egyszerű KDE-alkalmazás
+Comment[it]=Una semplice applicazione KDE
+Comment[nl]=Een eenvoudige KDE-toepassing
 Comment[pt]=Uma aplicação KDE simples
 Comment[pt_BR]=Um simples Aplicativo do KDE
+Comment[ru]=Простое приложение KDE
 Comment[sl]=Preprost program za KDE
-Comment[sr]=Проста KDE-ова апликација
+Comment[sr]=Једноставан KDE програм
 Comment[sv]=Ett enkelt KDE-program
 Comment[xx]=xxA simple KDE Applicationxx
+Comment[zh_CN]=一个简单的KDE应用程序
