--- a/languages/cpp/app_templates/kicker/applet.desktop
+++ b/languages/cpp/app_templates/kicker/applet.desktop
@@ -1,14 +1,22 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=A panel applet called $NAME$
+Comment[ca]=Un applet del plafó anomenat $NAME$
 Comment[da]=En panel-applet der hedder $NAME$
+Comment[de]=Ein Miniprogramm mit dem Namen $NAME$
 Comment[es]=Un applet del panel llamado $NAME$
+Comment[et]=Paneeliaplett nimega $NAME$
+Comment[fr]=Un applet pour le tableau de bord nommé $NAME$.
 Comment[hu]=$NAME$ nevű panel-kisalkalmazás
+Comment[it]=Un applet per il pannello chiamata $NAME$
+Comment[nl]=Een paneel-applet met naam $NAME$
 Comment[pt]=Um 'applet' para o painel chamado $NAME$
 Comment[pt_BR]=Uma applet de painel chamada $NAME$
-Comment[sr]=Панел аплет под називом $NAME$
+Comment[ru]=Аплет панели $NAME$
+Comment[sr]=Панелни аплет под називом $NAME$
 Comment[sv]=Ett panelminiprogram som kallas $NAME$
 Comment[xx]=xxA panel applet called $NAME$xx
+Comment[zh_CN]=一个称作$NAME$的面板小程序
 Name=$APPNAMELC$
 Name[xx]=xx$APPNAMELC$xx
 X-KDE-Library=lib$APPNAMELC$
