--- a/languages/cpp/compiler/gccoptions/kdevg77options.desktop
+++ b/languages/cpp/compiler/gccoptions/kdevg77options.desktop
@@ -3,17 +3,23 @@ Encoding=UTF-8
 Type=Service
 Exec=g77
 Comment=GNU Fortran 77 Compiler
+Comment[ca]=Compilador Fortran 77 de GNU
 Comment[da]=GNU Fortran 77 compiler
-Comment[de]=GNU Fortran 77-Compiler
 Comment[es]=Compilador de Fortran 77 de GNU
+Comment[et]=GNU Fortran 77 kompilaator
+Comment[fr]=Compilateur pour Fortran 77 du GNU.
 Comment[hu]=GNU Fortran 77 fordítóprogram
+Comment[it]=Compilatore per GNU Fortran 77
+Comment[nl]=GNU Fortran 77-compiler
 Comment[pt]=Compilador GNU Fortran 77
 Comment[pt_BR]=Compilador GNU Fortran 77
-Comment[sr]=GNU Fortran 77 компајлер
+Comment[ru]=Компилятор GNU Fortran 77
+Comment[sr]=GNU-ов Fortran 77 компајлер
 Comment[sv]=GNU Fortran 77-compilator
 Comment[xx]=xxGNU Fortran 77 Compilerxx
+Comment[zh_CN]=GNU Fortran 77编译器
 Name=G77Options
-Name[de]=G77Optionen
+Name[de]=G77-Einstellungen (KDevelop)
 Name[sv]=Alternativ för g77
 Name[xx]=xxG77Optionsxx
 ServiceTypes=KDevelop/CompilerOptions
