--- a/languages/cpp/compiler/gccoptions/kdevgppoptions.desktop
+++ b/languages/cpp/compiler/gccoptions/kdevgppoptions.desktop
@@ -3,17 +3,23 @@ Encoding=UTF-8
 Type=Service
 Exec=g++
 Comment=GNU C++ Compiler
+Comment[ca]=Compilador C++ de GNU
 Comment[da]=GNU C++ compiler
 Comment[de]=GNU C++-Compiler
 Comment[es]=Compilador de C++ de GNU
+Comment[et]=GNU C++ kompilaator
+Comment[fr]=Compilateur C++ du GNU.
 Comment[hu]=GNU C++ fordítóprogram
+Comment[it]=Compilatore GNU C++
 Comment[pt]=Compilador GNU C++
 Comment[pt_BR]=Compilador GNU C++
-Comment[sr]=GNU C++ компајлер
+Comment[ru]=Компилятор GNU C++
+Comment[sr]=GNU-ов C++ компајлер
 Comment[sv]=GNU C++ kompilator
 Comment[xx]=xxGNU C++ Compilerxx
+Comment[zh_CN]=GNU C++编译器
 Name=GppOptions
-Name[de]=GppOptionen
+Name[de]=GPP-Einstellungen (KDevelop)
 Name[sv]=Alternativ för g++
 Name[xx]=xxGppOptionsxx
 ServiceTypes=KDevelop/CompilerOptions
