--- a/languages/cpp/pcsimporter/qtimporter/kdevqtimporter.desktop
+++ b/languages/cpp/pcsimporter/qtimporter/kdevqtimporter.desktop
@@ -1,16 +1,26 @@
 [Desktop Entry]
 Type=Service
 Name=KDevQtImporter
-Name[de]=KDevQtImportierer
+Name[de]=QT-PCS-Import (KDevelop)
 Name[sv]=KDevelop QT-import
+Name[xx]=xxKDevQtImporterxx
 Comment=KDevelop Qt PCS Importer
+Comment[ca]=Importador PCS de Qt per a KDevelop
 Comment[da]=KDevelop Qt PCS importør
-Comment[de]=KDevelop Qt-PCS-Importierer
+Comment[de]=Qt-Import für persistenten Klassenspeicher
 Comment[es]=Importador de PCS de Qt de KDevelop
+Comment[et]=KDevelopi Qt PCS importija
+Comment[fr]=Un module externe pour l'importation PCS de Qt.
 Comment[hu]=KDevelop Qt PCS-importáló
+Comment[it]=Importatore per Qt PCS per KDeveloper
+Comment[nl]=KDevelop PCS Importer voor Qt
+Comment[pt]=Importador de PCS para Qt do KDevelop
 Comment[pt_BR]=Importador PCS Qt para o KDevelop
+Comment[ru]=Загрузка символов из библиотеки Qt в хранилище классов
 Comment[sr]=KDevelop-ов Qt PCS увозник
 Comment[sv]=KDevelop QT PCS-import
+Comment[xx]=xxKDevelop Qt PCS Importerxx
+Comment[zh_CN]=KDevelop Qt PCS导入器
 Icon=gear
 ServiceTypes=KDevelop/PCSImporter
 X-KDE-Library=libkdevqtimporter
