--- a/languages/haskell/compiler/ghcoptions/kdevghcoptions.desktop
+++ b/languages/haskell/compiler/ghcoptions/kdevghcoptions.desktop
@@ -4,17 +4,25 @@ Encoding=UTF-8
 Type=Service
 Exec=ghc --make
 Comment=Glasgow Haskell Compiler
+Comment[ca]=Compilador Haskell de Glasgow
 Comment[da]=Glasgow Haskell compiler
-Comment[de]=Glasgow Haskell-Compiler
 Comment[es]=Compilador Glasgow Haskell
+Comment[et]=Glasgow Haskelli kompilaator
+Comment[fr]=Compilateur Haskell de Glasgow.
 Comment[hu]=Glasgow Haskell fordítóprogram
+Comment[it]=Compilatore per Glasgow Haskell
+Comment[nl]=Glasgow Haskell-compiler
 Comment[pt]=Compilador Glasgow Haskell
 Comment[pt_BR]=Compilador Glasgow Haskell
+Comment[ru]=Компилятор Glasgow Haskell
 Comment[sr]=Glasgow Haskell компајлер
 Comment[sv]=Glasgow Haskell-kompilator
+Comment[xx]=xxGlasgow Haskell Compilerxx
+Comment[zh_CN]=Glasgow Haskell编译器
 Name=GhcOptions
-Name[de]=GhcOptionen
+Name[de]=Ghc-Einstellungen (KDevelop)
 Name[sv]=Alternativ för ghc
+Name[xx]=xxGhcOptionsxx
 ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevghcoptions
 X-KDevelop-Language=Haskell
