--- a/lib/interfaces/kdevelopbuildsystems.desktop
+++ b/lib/interfaces/kdevelopbuildsystems.desktop
@@ -4,15 +4,22 @@ Type=ServiceType
 X-KDE-ServiceType=KDevelop/BuildSystems
 X-KDE-Derived=KDevelop/Plugin
 Name=KDevelop Build System Interface
+Name[ca]=Interfície del sistema de construcció per a KDevelop
 Name[da]=KDevelop byggesystem grænseflade
-Name[de]=KDevelop-Systemerstellung-Schnittstelle
+Name[de]=Erstellungssystem-Schnittstelle (KDevelop)
 Name[es]=Interfaz del sistema de construcción de KDevelop
+Name[et]=KDevelopi ehitussüsteemi liides
+Name[fr]=Interface du système de construction de KDevelop
 Name[hu]=KDevelop fordításkezelő felület
 Name[it]=Interfaccia di compilazione di KDevelop
+Name[nl]=KDevelop Buildsysteem-interface
 Name[pt]=Interface do KDevelop para o Sistema de Compilação
 Name[pt_BR]=Interface de Sistema de Construção do KDevelop
-Name[sr]=KDevelop-ова изградња системског интерфејса
+Name[ru]=Интерфейс системы сборки
+Name[sr]=KDevelop-ов интерфејс система за изградњу
 Name[sv]=KDevelop byggsystemgränssnitt
+Name[xx]=xxKDevelop Build System Interfacexx
+Name[zh_CN]=KDevelop编译系统接口
 
 [PropertyDef::X-KDevelop-BuildSystem]
 Type=QString
