--- a/lib/interfaces/kdevelopcompileroptions.desktop
+++ b/lib/interfaces/kdevelopcompileroptions.desktop
@@ -4,16 +4,23 @@ Type=ServiceType
 X-KDE-ServiceType=KDevelop/CompilerOptions
 X-KDE-Derived=KDevelop/Plugin
 Name=KDevelop Compiler Options Dialog Interface
+Name[ca]=Interfície del diàleg d'opcions del compilador per a KDevelop
 Name[da]=KDevelop kompilerindstillinger dialoggrænseflade
-Name[de]=KDevelop-Compileroptionen-Dialogschnittstelle
+Name[de]=Schnittstelle für Compiler-Einstellungsdialoge (KDevelop)
+Name[en_GB]=KDevelop Compiler Options Dialogue Interface
 Name[es]=Interfaz del diálogo de opciones del compilador de KDevelop
+Name[et]=KDevelopi kompilaatori valikute dialoogiliides
+Name[fr]=Interface de la boite de dialogue d'options du compilateur de KDevelop
 Name[hu]=A KDevelop fordítási opcióinak párbeszédablaka
 Name[it]=Interfaccia KDevelop per le opzioni di compilazione
+Name[nl]=KDevelop Compileroptiesdialoog-interface
 Name[pt]=Interface da Janela de Opções do Compilador do KDevelop
 Name[pt_BR]=Interface de Diálogo de Opções do Compilador do KDevelop
-Name[sr]=KDevelop-ов интерфејс прозора „опције компајлера“
+Name[ru]=Интерфейс диалога опций компилятора
+Name[sr]=KDevelop-ов интерфејс дијалога „Опције преводиоца“
 Name[sv]=KDevelop dialoggränssnitt för kompilatoralternativ
 Name[xx]=xxKDevelop Compiler Options Dialog Interfacexx
+Name[zh_CN]=KDevelop编译器选项对话框接口
 
 [PropertyDef::X-KDevelop-Language]
 Type=QString
