--- a/lib/interfaces/kdevelopmakefrontend.desktop
+++ b/lib/interfaces/kdevelopmakefrontend.desktop
@@ -4,16 +4,22 @@ Type=ServiceType
 X-KDE-ServiceType=KDevelop/MakeFrontend
 X-KDE-Derived=KDevelop/Plugin
 Name=Make Frontend Interface
+Name[ca]=Interfície de l'entorn per a make
 Name[da]=Make forende grænseflade
-Name[de]=Make-Benutzerschnittstelle
+Name[de]=Schnittstelle für Make-Oberflächen (KDevelop)
 Name[es]=Interfaz del entorno de make
+Name[et]=Make kasutajaliides
+Name[fr]=Interface du programme « make »
 Name[hu]=Make kezelőfelület
 Name[it]=Interfaccia per Make
+Name[nl]=Make Frontend-interface
 Name[pt]=Interface para o Make
 Name[pt_BR]=Interface de Frontend do Make
-Name[sr]=Интерфејс за прављење сучеља
+Name[ru]=Интерфейс оболочки Make
+Name[sr]=Интерфејс сучеља справљача
 Name[sv]=Byggränssnitt
 Name[xx]=xxMake Frontend Interfacexx
+Name[zh_CN]=Make前端接口
 
 # versioning - prevent DLL hell
 [PropertyDef::X-KDevelop-Version]
