--- a/lib/interfaces/kdevelopsourceformatter.desktop
+++ b/lib/interfaces/kdevelopsourceformatter.desktop
@@ -4,16 +4,22 @@ Type=ServiceType
 X-KDE-ServiceType=KDevelop/SourceFormatter
 X-KDE-Derived=KDevelop/Plugin
 Name=Source formatter interface
+Name[ca]=Interfície del formatador de codi font
 Name[da]=Kildeformatering grænseflade
-Name[de]=Quelltextformatierung-Schnittstelle
+Name[de]=Quelltext-Formatierer-Schnittstelle (KDevelop)
 Name[es]=Interfaz del formateador de código fuente
+Name[et]=Koodi vormindamise liides
+Name[fr]=Interface de formatage de code source
 Name[hu]=Forrásformázási felület
 Name[it]=Interfaccia per il formattatore del codice sorgente
-Name[pt]=Interfaca de formatação de código
+Name[nl]=Broncode formatteren-interface
+Name[pt]=Interface de formatação de código
 Name[pt_BR]=Interface de formatação de fonte
+Name[ru]=Интерфейс форматировщика исходного кода
 Name[sr]=Интерфејс форматера изворног кода
 Name[sv]=Gränssnitt för källkodsformatering
 Name[xx]=xxSource formatter interfacexx
+Name[zh_CN]=源代码格式化接口
 
 # versioning - prevent DLL hell
 [PropertyDef::X-KDevelop-Version]
