--- a/lib/interfaces/kdevelopversioncontrol.desktop
+++ b/lib/interfaces/kdevelopversioncontrol.desktop
@@ -4,15 +4,21 @@ Type=ServiceType
 X-KDE-ServiceType=KDevelop/VersionControl
 X-KDE-Derived=KDevelop/Plugin
 Name=KDevelop Version Control Interface
+Name[ca]=Interfície del control de versions per a KDevelop
 Name[da]=KDevelop versionskontrol grænseflade
-Name[de]=KDevelop-Versionskontrolle-Schnittstelle
+Name[de]=Versionsverwaltung-Schnittstelle (KDevelop)
 Name[es]=Interfaz del control de versiones de KDevelop
+Name[et]=KDevelopi versioonide kontrollimise liides
+Name[fr]=Interface du contrôle de version de KDevelop
 Name[hu]=KDevelop verziókezelési felület
+Name[nl]=KDevelop Versiebeheer-interface
 Name[pt]=Interface de Controlo de Versões do KDevelop
 Name[pt_BR]=Interface de Controle de Versão do KDevelop
+Name[ru]=Интерфейс системы управления версиями
 Name[sr]=KDevelop-ов интерфејс за контролу верзије
 Name[sv]=KDevelop gränssnitt för versionskontroll
 Name[xx]=xxKDevelop Version Control Interfacexx
+Name[zh_CN]=KDevelop版本控制接口
 
 # versioning - prevent DLL hell
 [PropertyDef::X-KDevelop-Version]
