--- a/parts/buglist/kdevbuglist.desktop
+++ b/parts/buglist/kdevbuglist.desktop
@@ -1,31 +1,45 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=Bug Tracking Application
+Comment[ca]=Aplicació per al seguiment d'errors
 Comment[da]=Fejlsporings program
-Comment[de]=Fehlerverfolgung-Anwendung
+Comment[de]=Fehlerverfolgung-Unerstützung
 Comment[es]=Aplicación de gestión de fallos
+Comment[et]=Vigade haldamine
+Comment[fr]=Un module externe pour la recherche de bogues dans une application.
 Comment[hu]=Hibanyilvántartó alkalmazás
+Comment[it]=Applicazione per la raccolta dei bug
+Comment[nl]=Toepassing voor het bijhouden van bugs
 Comment[pt]=Aplicação de Gestão de Erros
 Comment[pt_BR]=Aplicativo de Rastreamento de Erro
-Comment[sr]=Апликација за праћење грешака
+Comment[ru]=Обработка списка ошибок
+Comment[sr]=Програм за праћење грешака
 Comment[sv]=Program för att spåra fel
 Comment[xx]=xxBug Tracking Applicationxx
+Comment[zh_CN]=Bug追踪程序
 Exec=blubb
 Icon=find
 Name=KDevBugList
-Name[de]=KDevFehlerListe
+Name[de]=Fehlerverfolgung-Unterstützung (KDevelop)
 Name[sv]=KDevelop fellista
 Name[xx]=xxKDevBugListxx
 GenericName=Bug Tracking Application
+GenericName[ca]=Aplicació per al seguiment d'errors
 GenericName[da]=Fejlsporings program
-GenericName[de]=Fehlerverfolgung-Anwendung
+GenericName[de]=Fehlerverfolgung-Unterstützung
 GenericName[es]=Aplicación de gestión de fallos
+GenericName[et]=Vigade haldamine
+GenericName[fr]=Recherche de bogues
 GenericName[hu]=hibanyilvántartó
+GenericName[it]=Applicazione per tracciare i bug
+GenericName[nl]=Programma voor bugtracking
 GenericName[pt]=Aplicação de Gestão de Erros
 GenericName[pt_BR]=Aplicativo de Rastreamento de Erro
-GenericName[sr]=Апликација за праћење грешака
+GenericName[ru]=Обработка списка ошибок
+GenericName[sr]=Програм за праћење грешака
 GenericName[sv]=Program för att spåra fel
 GenericName[xx]=xxBug Tracking Applicationxx
+GenericName[zh_CN]=Bug追踪程序
 ServiceTypes=KDevelop/Plugin
 Type=Service
 X-KDE-Library=libkdevbuglist
