--- a/parts/classview/kdevclassview.desktop
+++ b/parts/classview/kdevclassview.desktop
@@ -3,28 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=This plugin displays a graphical view of all the classes in the project, complete with methods and attributes, and provides a way of direct source navigation.
+Comment[ca]=Aquest connector mostra una vista gràfica de totes les classes del projecte, completant-lo amb mètodes i atributs, i proporciona una forma de navegar directament a través del codi font.
 Comment[da]=Dette plugin giver en grafisk visning af alle klasserne i projektet, fuldstændig med metoder og attributter, og sørger for en måde at have direkte kildenavigation.
-Comment[de]=Dieses Plugin stellt eine graphische Ansicht der aller Klassen des Projektes, mit allen Methoden und Attributen bereit. Ausserdem stellt es Direktnavigation durch den Quellcode bereit.
+Comment[de]=Dieses Plugin zeigt eine grafische Ansicht aller Klassen im Projekt, einschließlich der Methoden und Attribute und ermöglicht die Navigation in den betreffenden Quelltexten.
 Comment[es]=Este plugin muestra una vista gráfica de todas las clases del proyecto, completándolo con métodos y atributos, y proporciona una forma de navegar directamente por el código fuente.
+Comment[et]=See plugin näitab graafiliselt kõiki projekti klasse koos meetodite ja atribuutidega ning võimaldab nende vahel kiiresti liikuda.
+Comment[fr]=Ce module externe affiche une vision graphique de toutes les classes d'un projet, complétée par les méthodes et attributs, et permet de naviguer dans le code source directement.
 Comment[hu]=Bővítőmodul egy projekt osztályainak áttekintéséhez, a tagfüggvényekkel és az attribútumokkal együtt, navigálási lehetőséggel
+Comment[it]=Questo plugin offre una rappresentazione grafica di tutte le classi nel progetto, complete con metodi e attributi, e fornisce una via per la navigazione diretta nei sorgenti.
+Comment[nl]=Deze plugin toont een grafische weergave van alle klassen in een project, compleet met methoden en attributen, en biedt directe navigatie hiertussen.
+Comment[pt]=Este 'plugin' mostra uma vista gráfica de todas as classes no projecto, completas com os métodos e atributos, oferecendo uma forma de navegação directa sobre o código.
 Comment[pt_BR]=Este plugin exibe uma visão gráfica de todas as classes no projeto, juntamente com métodos e atributos, e fornece uma maneira de navegar diretamente no código.
-Comment[sr]=Овај прикључак приказује графички изглед свих класа у пројекту, заједно са методама и атрибутима, и обезбеђује начин директне навигације изворног кода.
+Comment[ru]=Этот модуль отображает список классов в проекте, включая методы и атрибуты а также предоставляет возможности навигации по коду.
+Comment[sr]=Овај додатак приказује графички изглед свих класа у пројекту, заједно са методама и атрибутима, и обезбеђује начин директне навигације кроз изворни кôд.
 Comment[sv]=Insticksprogrammet visar en grafisk bild av alla klasser i ett projekt, tillsammans med metoder och egenskaper, och ger möjlighet till direkt navigering i källkoden.
 Comment[xx]=xxThis plugin displays a graphical view of all the classes in the project, complete with methods and attributes, and provides a way of direct source navigation.xx
+Comment[zh_CN]=这个插件以图形显示项目中所有的类，包括完整的方法和属性，并提供浏览源文件的方法。
 Name=KDevClassView
-Name[de]=KDevKlassenAnsicht
+Name[de]=Klassenansicht (KDevelop)
 Name[sv]=KDevelop klassvisning
 Name[xx]=xxKDevClassViewxx
 GenericName=Class View
+GenericName[ca]=Visor de classes
 GenericName[da]=Klassevisning
 GenericName[de]=Klassenansicht
 GenericName[es]=Visor de clases
+GenericName[et]=Klasside vaade
+GenericName[fr]=Afficheur de classes
 GenericName[hu]=osztálynézegető
+GenericName[it]=Visualizza classe
+GenericName[nl]=Klassenweergave
 GenericName[pt]=Vista de Classe
 GenericName[pt_BR]=Visualizador de Classe
+GenericName[ru]=Просмотр классов
 GenericName[sr]=Преглед класа
 GenericName[sv]=Klassvisning
 GenericName[xx]=xxClass Viewxx
+GenericName[zh_CN]=类查看器
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevclassview
 X-KDevelop-Version=1
