--- a/parts/fileview/kdevfilegroups.desktop
+++ b/parts/fileview/kdevfilegroups.desktop
@@ -3,14 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Allows for grouping of project files according to filename patterns.
+Comment[ca]=Permet l'agrupació de fitxers del projecte d'acord als patrons dels seus noms.
+Comment[da]=Tillader gruppering af projektfiler efter filnavnemønstre.
+Comment[de]=Erlaubt die Gruppierung von Projektdateien nach Dateimustern.
+Comment[es]=Permite la agrupación de archivos del projecto de acuerdo con patrones en sus nombres.
+Comment[et]=Võimaldab rühmitada projekti faile vastavalt failinimede mustritele.
+Comment[fr]=Un module externe pour la gestion des groupes de fichiers. Il permet de grouper les fichiers d'un projet en fonction de motifs de noms de fichiers.
+Comment[hu]=Lehetővé teszi projektfájlok csoportosítását fájlnévminták alapján
+Comment[it]=Permette il raggruppamento dei file di progetto per nome file.
+Comment[nl]=Groepeert projectbestanden op grond van patronen in bestandsnamen.
+Comment[pt]=Permite o agrupamento de ficheiros de projecto, de acordo com padrões de nomes de ficheiros.
+Comment[pt_BR]=Permite agrupar arquivos de projetos de acordo com padrões de nome de arquivo.
+Comment[ru]=Позволяет группировать файлы в проекте согласно шаблонам имен.
+Comment[sr]=Дозвољава груписање фајлова пројекта према облицима имена фајлова.
+Comment[sv]=Tillåter att projektfiler grupperas enligt filnamnsmönster.
+Comment[xx]=xxAllows for grouping of project files according to filename patterns.xx
+Comment[zh_CN]=允许你根据文件名模式规类项目文件。
 Name=KDevFileGroups
+Name[de]=Dateigruppen-Komponente (KDevelop)
 Name[sv]=KDevelop filgrupper
 Name[xx]=xxKDevFileGroupsxx
 GenericName=File Groups
+GenericName[ca]=Grups de fitxers
+GenericName[da]=Filgrupper
+GenericName[de]=Dateigruppen
+GenericName[es]=Grupos de archivos
+GenericName[et]=Failigrupid
+GenericName[fr]=Groupes de fichiers
 GenericName[hu]=fájlcsoportok
+GenericName[it]=Gruppi file
+GenericName[nl]=Bestandsgroepen
+GenericName[pt]=Grupos de Ficheiros
 GenericName[pt_BR]=Grupos de Arquivo
+GenericName[ru]=Группы файлов
+GenericName[sr]=Групе фајлова
 GenericName[sv]=Filgrupper
 GenericName[xx]=xxFile Groupsxx
+GenericName[zh_CN]=文件分类
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfilegroups
 X-KDevelop-Version=1
