--- a/parts/scripting/kdevscripting.desktop
+++ b/parts/scripting/kdevscripting.desktop
@@ -3,29 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Python Scripting Interface
+Comment[ca]=Interfície per a escriure scripts de Python
 Comment[da]=Python scripting grænseflade
-Comment[de]=Python-Skriptschnitstelle
+Comment[de]=Schnittstelle für Python-Skripte
 Comment[es]=Interfaz para guiones de Python
+Comment[et]=Pythoni skriptide liides
+Comment[fr]=Un module externe pour la gestion de scripts avec le langage PYTHON.
 Comment[hu]=Python szkriptelési felület
+Comment[it]=Interfaccia per lo scripting in Python
+Comment[nl]=Interface voor Python-scripting
 Comment[pt]=Interface de 'Scripting' em Python
 Comment[pt_BR]=Interface para Script Python
+Comment[ru]=Интерфейс к скриптам на Python
 Comment[sr]=Python-ов интерфејс за скриптовање
 Comment[sv]=Python skriptgränssnitt
 Comment[xx]=xxPython Scripting Interfacexx
+Comment[zh_CN]=Python脚本接口
 Name=KDevScripting
-Name[de]=KDevSkript
+Name[de]=Skript-Schnittstelle (KDevelop)
 Name[sv]=KDevelop skripthantering
 Name[xx]=xxKDevScriptingxx
 GenericName=Python Scripting Interface
+GenericName[ca]=Interfície per a escriure scripts de Python
 GenericName[da]=Python scripting grænseflade
-GenericName[de]=Python-Skriptschnitstelle
+GenericName[de]=Python-Skript-Schnittstelle
 GenericName[es]=Interfaz para guiones de Python
+GenericName[et]=Pythoni skriptide liides
+GenericName[fr]=Interface PYTHON
 GenericName[hu]=Python szkriptelési felület
+GenericName[it]=Interfaccia per scrivere script in Python
+GenericName[nl]=Interface voor Python-scripting
 GenericName[pt]=Interface de 'Scripting' em Python
 GenericName[pt_BR]=Interface para Script Python
+GenericName[ru]=Интерфейс к скриптам на Python
 GenericName[sr]=Python-ов интерфејс за скриптовање
 GenericName[sv]=Python skriptgränssnitt
 GenericName[xx]=xxPython Scripting Interfacexx
+GenericName[zh_CN]=Python脚本接口
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevscripting
 X-KDevelop-Version=1
