--- a/parts/tipofday/kdevpart_tipofday.desktop
+++ b/parts/tipofday/kdevpart_tipofday.desktop
@@ -3,29 +3,43 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Tip of the Day
+Comment[ca]=Consell del dia
 Comment[da]=Dagens vink
 Comment[de]=Tipp des Tages
 Comment[es]=Consejo del día
+Comment[et]=Päeva nõuanne
+Comment[fr]=Un module externe pour la gestion des astuces du jour.
 Comment[hu]=A nap tippje
+Comment[it]=Suggerimento del giorno
+Comment[nl]=Tip van de dag
 Comment[pt]=Dica do Dia
 Comment[pt_BR]=Dica do Dia
+Comment[ru]=Полезный совет
 Comment[sr]=Савет дана
 Comment[sv]=Dagens tips
 Comment[xx]=xxTip of the Dayxx
+Comment[zh_CN]=日积月累
 Name=KDevTipOfDay
-Name[de]=KDevTipDesTages
+Name[de]=Tipp-des-Tages-Komponente (KDevelop)
 Name[sv]=KDevelop dagens tips
 Name[xx]=xxKDevTipOfDayxx
 GenericName=Tip of the Day
+GenericName[ca]=Consell del dia
 GenericName[da]=Dagens vink
 GenericName[de]=Tipp des Tages
 GenericName[es]=Consejo del día
+GenericName[et]=Päeva nõuanne
+GenericName[fr]=Astuces du jour
 GenericName[hu]=a nap tippje
+GenericName[it]=Suggerimento del giorno
+GenericName[nl]=Tip van de dag
 GenericName[pt]=Dica do Dia
 GenericName[pt_BR]=Dica do Dia
+GenericName[ru]=Полезный совет
 GenericName[sr]=Савет дана
 GenericName[sv]=Dagens tips
 GenericName[xx]=xxTip of the Dayxx
+GenericName[zh_CN]=日积月累
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevtipofday
